# nekolibrarian

./: .gitignore  Dockerfile  README.md  docker-compose.yml  licence  main.py  pgadmin-servers.json  pyproject.toml
.devcontainer/: devcontainer.json
alembic/: env.py
alembic/versions/: 49a86e122582_make_user_id_optional.py  6edd7a61bd8a_change_user_group_id_to_bigint.py  af9b59348e46_create_initial_tables.py
app/: __init__.py  agents.py  collector.py  configs.py  database.py  memory.py  models.py  schemas.py
app/agents/: __init__.py  deps.py  group.py  private.py
app/tools/: archiviste.py  memory.py  pixiv.py  qweather.py
